force-app/main/default/src/objects/PJN_Trigger_Handler_Setting__mdt/PJN_Trigger_Handler_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Triggers
Purpose: Define the order of execution of triggers. This is a global setting for all Programs and should not need to be changed.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Trigger Handler Setting</label>
    <pluralLabel>Trigger Handler Settings</pluralLabel>
</CustomObject>