force-app/main/default/src/objects/PJN_Trigger_Handler_Setting__mdt/fields/PJN_Class__c.field-meta.xml
<CustomField>
    <fullName>PJN_Class__c</fullName>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>