force-app/main/default/src/objects/PJN_Trigger_Handler_Setting__mdt/fields/PJN_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Event__c</fullName>
    <label>Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <default>true</default>
                <label>AFTER_DELETE</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>BEFORE_INSERT</fullName>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>