force-app/main/default/src/objects/PJN_Trigger_Handler_Setting__mdt/fields/PJN_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>