force-app/main/default/src/objects/PJN_Trigger_Handler_Setting__mdt/listViews/PJN_All.listView-meta.xml
<ListView>
    <fullName>PJN_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Active__c</columns>
    <columns>PJN_SObject_API_Name__c</columns>
    <columns>PJN_Event__c</columns>
    <columns>PJN_Order__c</columns>
    <columns>PJN_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>